ScenarioA_02/kubernetes/ace-integration-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ace-integration-server
  namespace: scenario-a-demo
  labels:
    app: ace-integration-server
    app.kubernetes.io/name: ace-integration-server
    app.kubernetes.io/component: integration
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 7800
      targetPort: 7800
      protocol: TCP
    - name: https
      port: 7843
      targetPort: 7843
      protocol: TCP
    - name: admin
      port: 7600
      targetPort: 7600
      protocol: TCP
  selector:
    app.kubernetes.io/name: order-orchestration-server

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ace-integration-server
  namespace: scenario-a-demo
  labels:
    app: ace-integration-server
spec:
  to:
    kind: Service
    name: ace-integration-server
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ace-admin-ui
  namespace: scenario-a-demo
  labels:
    app: ace-integration-server
spec:
  to:
    kind: Service
    name: ace-integration-server
    weight: 100
  port:
    targetPort: admin
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
